Too many changes :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,20 @@
 <resources>
 
     <string name="app_name">pimatic</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="devices">Devices</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
+    <string name="default_protocol">http</string>
+    <string name="default_host">demo.pimatic.org</string>
+    <integer name="default_port">80</integer>
+    <string name="default_username">demo</string>
+    <string name="default_password">demo</string>
 
+
+    <string-array name="protocols_names">
+        <item>http</item>
+        <item>https</item>
+    </string-array>
 </resources>
