--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     </string-array>
 
     <string-array name="navigation_drawer_group_Settings">
+        <item>Connections</item>
     </string-array>
 
 </resources>
